--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,14 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <style>
+        .table-responsive {
+            width: 100%;
+            height: 100%;
+            overflow: visible;
+        }
+    </style>
 </head>
 
 <body>
