--- a/templates/edit_lid.html
+++ b/templates/edit_lid.html
@@ -126,7 +126,9 @@
         </div>
 
         <br>
+        {% if perms.LedenAdministratie.change_lid %}
         <button type="submit" class="btn btn-success">Opslaan</button>
+        {% endif %}
         <button onclick="javascript:history.go(-1)" type="button" class="btn btn-default">Annuleren</button>
     </form>
 
