Order by lastname properly (not taking 'van', 'van de' etc. into account

--- a/templates/ledenlijst.html
+++ b/templates/ledenlijst.html
@@ -17,7 +17,7 @@
 {% block content %}
 
     <div class="alert alert-info">
-        Aantal leden op deze lijst: {{ leden.count }}
+        Aantal leden op deze lijst: {{ count }}
     </div>
 
     <div class="table-responsive">
