--- a/templates/edit_lid_email.html
+++ b/templates/edit_lid_email.html
@@ -21,6 +21,7 @@ T-Shirt       : {{ oldlid.tshirt_maat }} --> {{ lid.tshirt_maat }}
 Verzekering   : {{ oldlid.verzekerings_nr }} --> {{ lid.verzekerings_nr }}
 Badge         : {{ oldlid.jub_badge }} --> {{ lid.jub_badge }}
 Opmerkingen   : {{ oldlid.opmerkingen }} --> {{ lid.opmerkingen }}
+Foto op site  : {{ oldlid.foto }} --> {{ lid.foto }}
 
 Met vriendelijke groet,
 St. Ansfridus
