Remove 'full-time' from confirmation page

--- a/LedenAdministratie/templates/aanmelden_ok.html
+++ b/LedenAdministratie/templates/aanmelden_ok.html
@@ -33,7 +33,7 @@
         Wij hanteren - helaas - een wachtlijst voor alle leeftijdscategorieen.
         Uw aanmelding is op de wachtlijst geplaatst.
         Er is een mogelijkheid om langs de wachtlijst te komen:
-        Als u ons helpt aan een actieve full-time vrijwilliger die gaat meedraaien als leiding bij onze groep
+        Als u ons helpt aan een actieve vrijwilliger die gaat meedraaien als leiding bij onze groep,
      	kan uw kind direct geplaatst worden.
         Is dit het geval, stuur dan een mail naar vrijwilliger@ansfridus.nl
         </p>
