--- a/LedenAdministratie/templates/aanmelden_email_user.html
+++ b/LedenAdministratie/templates/aanmelden_email_user.html
@@ -6,7 +6,7 @@ Houd er echter rekening mee dat plaatsing - naar verwachting - op zijn vroegst
 pas over een jaar zal plaatsvinden en dan nog alleen als er dan plek is. Wij kunnen helaas niets garanderen.
 
 Er is een mogelijkheid om langs de wachtlijst te komen:
-Als u ons helpt aan een actieve full-time vrijwilliger die gaat meedraaien in de leiding van onze groep, kan
+Als u ons helpt aan een actieve vrijwilliger die gaat meedraaien in de leiding van onze groep, kan
 uw kind met voorrang worden geplaatst. Is dit het geval, stuur dan een mail naar vrijwilliger@ansfridus.nl.
 
 De door u ingevoerde gegevens:
