--- a/LedenAdministratie/templates/aanmelden_email_user.html
+++ b/LedenAdministratie/templates/aanmelden_email_user.html
@@ -1,4 +1,4 @@
-Bedankt voor uw aanmelding bij scouting St. Ansfridus.
+Bedankt voor uw aanmelding bij DJO.
 
 Wij hanteren - helaas - een wachtlijst voor alle leeftijdscategorieen.
 Aanmeldigen worden eerst op de wachtlijst geplaatst.
@@ -20,4 +20,4 @@ Telefoon  : {{ lid.telnr }}
 E-mail    : {{ lid.email_address }}
 
 Met vriendelijke groet,
-Scouting St. Ansfridus
+De Jonge Onderzoekers
