--- a/LedenAdministratie/templates/edit_lid.html
+++ b/LedenAdministratie/templates/edit_lid.html
@@ -91,40 +91,16 @@
 
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Gegevens Scouting
+                    Overig
                 </div>
                 <div class="panel-body">
 
                     <div class="col-md-5">
-
-                        <label for="id_scouting_nr">Scouting nummer</label>
-                        {{ form.scouting_nr|add_class:'form-control' }}
-
-                        <label for="id_telnr">T-Shirt maat</label>
-                        {{ form.tshirt_maat|add_class:'form-control' }}
-
-                        <label for="id_jub_badge">Jubileum Badges</label>
-                        {{ form.jub_badge|add_class:'form-control' }}
-
                         <label for="id_opmerkingen">Opmerkingen</label>
                         {{ form.opmerkingen|add_class:'form-control' }}
                     </div>
                     <div class="col-md-5">
-                        <label for="id_inschrijf_datum_sn">Inschrijfdatum SN</label>
-                        {{ form.inschrijf_datum_sn|add_class:'form-control' }}
-
-                        <label for="id_verzekerings_nr">Verzekerings Nr</label>
-                        {{ form.verzekerings_nr|add_class:'form-control' }}
-
-                        <label for="id_bijzonderheden">Bijzonderheden</label>
-                        {{ form.bijzonderheden|add_class:'form-control' }}
-
                         <br>
-                        <div class="checkbox-inline">
-                            <label for="id_fotopubliek">
-                                {{ form.fotopubliek }} Foto's mogen gepubliceerd worden
-                            </label>
-                        </div>
                     </div>
                 </div>
             </div>
