--- a/LedenAdministratie/templates/aanmelden_ok.html
+++ b/LedenAdministratie/templates/aanmelden_ok.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Ledensite St. Ansfridus">
+    <meta name="description" content="Ledensite DJO">
 
-    <title>Ledenadministratie St. Ansfridus</title>
+    <title>Ledenadministratie DJO</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
