--- a/LedenAdministratie/templates/base.html
+++ b/LedenAdministratie/templates/base.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Ledensite St. Ansfridus">
+    <meta name="description" content="Ledensite DJO">
 
-    <title>Ledenadministratie St. Ansfridus</title>
+    <title>Ledenadministratie DJO</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -36,7 +36,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="{% url 'ledenlijst' 'wachtlijst' %}">Ledenadministratie St. Ansfridus</a>
+            <a class="navbar-brand" href="{% url 'ledenlijst' 'wachtlijst' %}">Ledenadministratie DJO</a>
         </div>
     </div>
 </nav>
