--- a/LedenAdministratie/templates/aanmelden_ok.html
+++ b/LedenAdministratie/templates/aanmelden_ok.html
@@ -39,7 +39,7 @@
         </p>
         <p>
         Met vriendelijke groeten,
-        Bestuur scouting St Ansfridus
+        Bestuur de Jonge Onderzoekers
         </p>
     </div>
 </div>
