More DJO  branding

--- a/LedenAdministratie/templates/aanmelden_email.html
+++ b/LedenAdministratie/templates/aanmelden_email.html
@@ -1,4 +1,4 @@
-Er is een nieuw lid aangemeld op de wachtlijst van St. Ansfridus:
+Er is een nieuw lid aangemeld bij DJO:
 
 Naam      : {{ lid.first_name }} {{ lid.last_name }} ({{ lid.geslacht }})
 Adres     : {{ lid.straat }}
@@ -10,4 +10,4 @@ E-mail    : {{ lid.email_address }}
 Speltak   : {{ lid.wachtlijst_speltak }}
 
 Met vriendelijke groet,
-St. Ansfridus
+DJO Ledensite
