--- a/LedenAdministratie/templates/aanmelden_ok.html
+++ b/LedenAdministratie/templates/aanmelden_ok.html
@@ -30,12 +30,7 @@
     <div class="jumbotron">
         <h2>Bedankt voor uw belangstelling!</h2>
         <p>
-        Wij hanteren - helaas - een wachtlijst voor alle leeftijdscategorieen.
-        Uw aanmelding is op de wachtlijst geplaatst.
-        Er is een mogelijkheid om langs de wachtlijst te komen:
-        Als u ons helpt aan een actieve vrijwilliger die gaat meedraaien als leiding bij onze groep,
-     	kan uw kind direct geplaatst worden.
-        Is dit het geval, stuur dan een mail naar vrijwilliger@ansfridus.nl
+            Uw aanmelding is succesvol ontvangen. Bedankt!
         </p>
         <p>
         Met vriendelijke groeten,
