--- a/LedenAdministratie/templates/base.html
+++ b/LedenAdministratie/templates/base.html
@@ -36,7 +36,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="{% url 'ledenlijst' 'wachtlijst' %}">Ledenadministratie DJO</a>
+            <a class="navbar-brand" href="{% url 'ledenlijst' 'nieuw' %}">Ledenadministratie DJO</a>
         </div>
     </div>
 </nav>
