--- a/LedenAdministratie/templates/edit_lid_email.html
+++ b/LedenAdministratie/templates/edit_lid_email.html
@@ -7,21 +7,15 @@ Postcode   : {{ oldlid.postcode }} --> {{ lid.postcode }}
 Woonplaats : {{ oldlid.woonplaats }} --> {{ lid.woonplaats }}
 Telefoon   : {{ oldlid.telnr }} --> {{ lid.telnr }}
 E-mail     : {{ oldlid.email_address }} --> {{ lid.email_address }}
-Speltak    : {{ oldlid.speltak }} --> {{ lid.speltak }}
+Lijst      : {{ oldlid.speltak }} --> {{ lid.speltak }}
 Mobiel     : {{ oldlid.mobiel }} --> {{ lib.mobiel }}
 
 Mob Ouder 1	  : {{ oldlid.mobiel_ouder1 }} --> {{ lid.mobiel_ouder1 }}
 Mob Ouder 2	  : {{ oldlid.mobiel_ouder2 }} --> {{ lid.mobiel_ouder2 }}
 Email Ouder 1 : {{ oldlid.email_ouder1 }} --> {{ lid.email_ouder1 }}
 Email Ouder 2 : {{ oldlid.email_ouder2 }} --> {{ lid.email_ouder2 }}
-Scouting Nr   : {{ oldlid.scouting_nr }} --> {{ lid.scouting_nr }}
 
-Bijzonderheden: {{ oldlid.bijzonderheden }} --> {{ lid.bijzonderheden }}
-T-Shirt       : {{ oldlid.tshirt_maat }} --> {{ lid.tshirt_maat }}
-Verzekering   : {{ oldlid.verzekerings_nr }} --> {{ lid.verzekerings_nr }}
-Badge         : {{ oldlid.jub_badge }} --> {{ lid.jub_badge }}
 Opmerkingen   : {{ oldlid.opmerkingen }} --> {{ lid.opmerkingen }}
-Foto op site  : {{ oldlid.foto }} --> {{ lid.foto }}
 
 Met vriendelijke groet,
-St. Ansfridus
+DJO Ledensite
