--- a/LedenAdministratie/templates/edit_lid.html
+++ b/LedenAdministratie/templates/edit_lid.html
@@ -55,7 +55,7 @@
                         <label for="id_email_address">E-mail adres *</label>
                         {{ form.email_address|add_class:'form-control' }}
 
-                        <label for="id_speltak">Speltak</label>
+                        <label for="id_speltak">Lijst</label>
                         {{ form.speltak|add_class:'form-control' }}
                     </div>
                 </div>
