--- a/LedenAdministratie/templates/ledenlijst.html
+++ b/LedenAdministratie/templates/ledenlijst.html
@@ -32,7 +32,7 @@
                 <th>Tel. Nr.</th>
                 <th>Aangemeld op</th>
                 <th>Leeftijd</th>
-                <th>Speltak</th>
+                <th>Lijst</th>
                 <th></th>
                 <th></th>
             </tr>
