--- a/LedenAdministratie/templates/login.html
+++ b/LedenAdministratie/templates/login.html
@@ -20,12 +20,6 @@
     <!-- Custom styles for this template -->
     <link href="{% static 'css/signin.css' %}" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <body>
@@ -40,7 +34,7 @@
         {{ form.username|add_class:'form-control'|attr:'placeholder:Gebruikersnaam' }}
 
         <label for="password" class="sr-only">Your password</label>
-        {{ form.password|add_class:'form-control'|attr:'placeholder:Password' }}
+        {{ form.password|add_class:'form-control'|attr:'placeholder:Wachtwoord' }}
 
         <button class="btn btn-lg btn-primary btn-block" type="submit">Inloggen</button>
     </form>
