--- a/LedenAdministratie/static/css/signin.css
+++ b/LedenAdministratie/static/css/signin.css
@@ -1,27 +1,31 @@
+html,
 body {
+  height: 100%;
+}
+
+body {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #eee;
+  background-color: #f5f5f5;
 }
 
 .form-signin {
+  width: 100%;
   max-width: 330px;
   padding: 15px;
-  margin: 0 auto;
-}
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
-  margin-bottom: 10px;
+  margin: auto;
 }
 .form-signin .checkbox {
-  font-weight: normal;
+  font-weight: 400;
 }
 .form-signin .form-control {
   position: relative;
+  box-sizing: border-box;
   height: auto;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
   padding: 10px;
   font-size: 16px;
 }
