--- a/LedenAdministratie/templates/aanmelden_lid.html
+++ b/LedenAdministratie/templates/aanmelden_lid.html
@@ -1,11 +1,10 @@
 {% load staticfiles %}
 {% load widget_tweaks %}
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Ledensite DJO">
 
@@ -16,12 +15,6 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 
 <body>
@@ -30,7 +23,7 @@
     <div class="col-sm-12 main">
 
         <div class="alert alert-success">
-            <span class="glyphicon glyphicon-info-sign"></span>
+            <span data-feather="info"></span>
             Velden met een * zijn verplicht
         </div>
 
@@ -125,7 +118,9 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="{% static 'js/jquery.min.js' %}"></script>
+<script src="{% static 'js/jquery.slim.min.js' %}"></script>
+<script src="{% static 'js/popper.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </body>
 </html>
+s
