--- a/LedenAdministratie/templates/base.html
+++ b/LedenAdministratie/templates/base.html
@@ -1,71 +1,80 @@
 {% load staticfiles %}
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Ledensite DJO">
 
     <title>Ledenadministratie DJO</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
-
-    <style>
-        .table-responsive {
-            width: 100%;
-            height: 100%;
-            overflow: visible;
-        }
-    </style>
+    <link href="{% static 'css/dashboard.css' %}" rel="stylesheet" crossorigin="anonymous">
 </head>
 
 <body>
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
+<! -- <nav class="navbar navbar-inverse navbar-fixed-top"> -->
     <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="{% url 'ledenlijst' 'nieuw' %}">Ledenadministratie DJO</a>
-        </div>
+        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="{% url 'ledenlijst' 'nieuw' %}">Ledenadministratie DJO</a>
     </div>
 </nav>
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-2 col-md-1 sidebar">
-            {% block navbar %}
+        <nav class="col-sm-2 col-md-1 d-none d-sm-block d-md-block bg-light sidebar">
+            <div class="sidebar-sticky">
+
+                {% block navbar %}
+                {% endblock %}
+
+                <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                    <span>Navigatie</span>
+                </h6>
+
+                <ul class="nav flex-column">
+                    {% if perms.LedenAdministratie.change_lid %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'lid_create' %}">
+                                <span data-feather="user-plus"></span>Nieuw Lid
+                            </a>
+                        </li>
+                    {% endif %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'export' %}">
+                        <span data-feather="file-text"></span>Excel Export</a></li>
+                    {% if request.user.is_superuser %}
+                        <li><a class="nav-link" href="/admin/"><span data-feather="users"></span>Gebruikers</a></li>
+                    {% endif %}
+                </ul>
+
+                <div class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                </div>
+
+                <ul class="nav flex-column">
+                    <li><a class="nav-link" href="{% url 'logoff' %}"><span data-feather="log-out"></span>Uitloggen</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <main role="main" class="col-md-11 ml-sm-auto col-lg-11 px-4">
+            {% block content %}
             {% endblock %}
-
-            <ul class="nav nav-sidebar">
-                {% if perms.LedenAdministratie.change_lid %}
-                    <li><a href="{% url 'lid_create' %}">Nieuw Lid</a></li>
-                {% endif %}
-                <li><a href="{% url 'export' %}">Excel Export</a></li>
-                {% if request.user.is_superuser %}
-                    <li><a href="/admin/">Gebruikers</a></li>
-                {% endif %}
-            </ul>
-            <ul class="nav nav-sidebar">
-                <li><a href="{% url 'logoff' %}">Uitloggen</a></li>
-            </ul>
-        </div>
-
-        <div class="col-sm-10 col-sm-offset-2 col-md-11 col-md-offset-1 main">
-        {% block content %}
-        {% endblock %}
-        </div>
+        </main>
     </div>
 </div>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="{% static 'js/jquery.min.js' %}"></script>
+<script src="{% static 'js/jquery.slim.min.js' %}"></script>
+<script src="{% static 'js/popper.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/feather.min.js' %}"></script>
+<script>feather.replace()</script>
 </body>
 </html>
