--- a/LedenAdministratie/templates/edit_lid.html
+++ b/LedenAdministratie/templates/edit_lid.html
@@ -2,33 +2,37 @@
 {% load widget_tweaks %}
 
 {% block navbar %}
-    <ul class="nav nav-sidebar">
-        {% for taktag, takname in lid.LIJST_CHOICES %}
-            <li {% if lid.speltak == taktag %} class="active" {% endif %}>
-                <a href="{% url 'ledenlijst' taktag %}">{{ takname }}</a>
-            </li>
 
-        {% endfor %}
+<h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+    <span>Filters</span>
+</h6>
 
-    </ul>
+<ul class="nav flex-column">
+    {% for taktag, takname in lid.LIJST_CHOICES %}
+    <li class="nav-item">
+        <a {% if lid.speltak == taktag %} class="nav-link active" {% else %} class="nav-link" {% endif %}
+           href="{% url 'ledenlijst' taktag %}">
+            <span data-feather="filter"></span>{{ takname }}
+        </a>
+    </li>
+    {% endfor %}
+</ul>
+
 {% endblock %}
 
 {% block content %}
 
-    {% include 'alerts.html' %}
+{% include 'alerts.html' %}
 
-    <form method="post">
-        {% csrf_token %}
+<form method="post">
+    {% csrf_token %}
 
-        <div class="row">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Basisgegevens
-                </div>
-                <div class="panel-body">
-
+    <div class="col-md-10">
+        <div class="card">
+            <div class="card-body">
+                <div class="card-header text-white bg-secondary">Basisgegevens</div>
+                <div class="form-row">
                     <div class="col-md-5">
-
                         <label for="id_first_name">Voornaam *</label>
                         {{ form.first_name|add_class:'form-control' }}
 
@@ -43,7 +47,6 @@
 
                         <label for="id_geslacht">Geslacht *</label>
                         {{ form.geslacht|add_class:'form-control' }}
-
                     </div>
                     <div class="col-md-5">
                         <label for="id_last_name">Achternaam *</label>
@@ -60,15 +63,16 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
 
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Contactgegevens Ouders
-                </div>
-                <div class="panel-body">
+    <div class="col-md-10">
+        <div class="card">
+            <div class="card-body">
+                <div class="card-header text-white bg-secondary">Contactgegevens Ouders</div>
 
+                <div class="form-row">
                     <div class="col-md-5">
-
                         <label for="id_mobiel_ouder1">Mobiel Ouder 1</label>
                         {{ form.mobiel_ouder1|add_class:'form-control' }}
 
@@ -77,7 +81,6 @@
 
                         <label for="id_telnr">Tel. Nummer *</label>
                         {{ form.telnr|add_class:'form-control' }}
-
                     </div>
                     <div class="col-md-5">
                         <label for="id_mobiel_ouder2">Mobiel Ouder 2</label>
@@ -88,31 +91,31 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
 
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Overig
+    <div class="col-md-10">
+        <div class="card">
+            <div class="card-body">
+                <div class="card-header text-white bg-secondary">Overig</div>
+
+                <div class="col-md-5">
+                    <label for="id_opmerkingen">Opmerkingen</label>
+                    {{ form.opmerkingen|add_class:'form-control' }}
                 </div>
-                <div class="panel-body">
-
-                    <div class="col-md-5">
-                        <label for="id_opmerkingen">Opmerkingen</label>
-                        {{ form.opmerkingen|add_class:'form-control' }}
-                    </div>
-                    <div class="col-md-5">
-                        <br>
-                    </div>
+                <div class="col-md-5">
+                    <br>
                 </div>
             </div>
-
         </div>
+    </div>
 
-        <br>
-        {% if perms.LedenAdministratie.change_lid %}
-            <button type="submit" class="btn btn-success">Opslaan</button>
-        {% endif %}
-        <button onclick="javascript:history.go(-1)" type="button" class="btn btn-default">Annuleren</button>
-    </form>
-
+    <br>
+    {% if perms.LedenAdministratie.change_lid %}
+    <button type="submit" class="btn btn-success">Opslaan</button>
+    {% endif %}
+    <button onclick="javascript:history.go(-1)" type="button" class="btn btn-secondary">Annuleren</button>
+</form>
+<br/>
 
 {% endblock %}
