--- a/LedenAdministratie/templates/login.html
+++ b/LedenAdministratie/templates/login.html
@@ -1,12 +1,11 @@
 {% load staticfiles %}
 {% load widget_tweaks %}
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
@@ -15,10 +14,10 @@
     <title>Ledenadministratie DJO</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <link href="{% static 'css/signin.css' %}" rel="stylesheet">
+    <link href="{% static 'css/signin.css' %}" rel="stylesheet" crossorigin="anonymous">
 
 </head>
 
@@ -36,7 +35,7 @@
         <label for="password" class="sr-only">Your password</label>
         {{ form.password|add_class:'form-control'|attr:'placeholder:Wachtwoord' }}
 
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Inloggen</button>
+        <button class="btn btn-success btn-block" type="submit">Inloggen</button>
     </form>
 
 </div> <!-- /container -->
