Fix top header position

--- a/LedenAdministratie/templates/base.html
+++ b/LedenAdministratie/templates/base.html
@@ -19,10 +19,7 @@
 <body>
 
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-<! -- <nav class="navbar navbar-inverse navbar-fixed-top"> -->
-    <div class="container-fluid">
-        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="{% url 'ledenlijst' 'nieuw' %}">Ledenadministratie DJO</a>
-    </div>
+    <a class="navbar-brand col-sm-2 col-md-1 mr-0" href="{% url 'ledenlijst' 'nieuw' %}">Leden DJO</a>
 </nav>
 
 <div class="container-fluid">
