--- a/LedenAdministratie/templates/base.html
+++ b/LedenAdministratie/templates/base.html
@@ -19,12 +19,12 @@
 <body>
 
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-sm-2 col-md-1 mr-0" href="{% url 'ledenlijst' 'nieuw' %}">Leden DJO</a>
+    <a class="navbar-brand col-2 mr-0" href="{% url 'ledenlijst' 'nieuw' %}">Leden DJO</a>
 </nav>
 
 <div class="container-fluid">
     <div class="row">
-        <nav class="col-sm-2 col-md-1 d-none d-sm-block d-md-block bg-light sidebar">
+        <nav class="col-2 d-none d-block bg-light sidebar">
             <div class="sidebar-sticky">
 
                 {% block navbar %}
@@ -49,16 +49,13 @@
                     {% endif %}
                 </ul>
 
-                <div class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-                </div>
-
-                <ul class="nav flex-column">
+                <ul class="nav flex-column mt-4 mb-1">
                     <li><a class="nav-link" href="{% url 'logoff' %}"><span data-feather="log-out"></span>Uitloggen</a></li>
                 </ul>
             </div>
         </nav>
 
-        <main role="main" class="col-md-11 ml-sm-auto col-lg-11 px-4">
+        <main role="main" class="col-10 ml-auto">
             {% block content %}
             {% endblock %}
         </main>
