--- a/LedenAdministratie/templates/ledenlijst.html
+++ b/LedenAdministratie/templates/ledenlijst.html
@@ -26,8 +26,8 @@
     </div>
 
     <div class="table-responsive">
-        <table class="table table-hover table-striped table-sm">
-            <thead>
+        <table class="table table-hover table-sm">
+            <thead class="thead-light">
             <tr>
                 <th>Naam</th>
                 <th>E-mail</th>
