Use badge for list counter

--- a/LedenAdministratie/templates/ledenlijst.html
+++ b/LedenAdministratie/templates/ledenlijst.html
@@ -22,7 +22,8 @@
 {% block content %}
 
     <div class="alert alert-info bg-secondary text-white">
-        Aantal leden op deze lijst: {{ count }}
+        Aantal leden op deze lijst:
+        <span class="badge badge-light">{{ count }}</span>
     </div>
 
     <div class="table-responsive">
