--- a/LedenAdministratie/templates/export.html
+++ b/LedenAdministratie/templates/export.html
@@ -1,23 +1,6 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
 
-{% block navbar %}
-<h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-    <span>Filters</span>
-</h6>
-
-<ul class="nav flex-column">
-    {% for taktag, takname in speltakken %}
-    <li class="nav-item">
-        <a {% if speltak == taktag %} class="nav-link active" {% else %} class="nav-link" {% endif %}
-           href="{% url 'ledenlijst' taktag %}">
-            <span data-feather="filter"></span>{{ takname }}
-        </a>
-    </li>
-    {% endfor %}
-</ul>
-{% endblock %}
-
 {% block content %}
 
 <br/>
@@ -27,7 +10,7 @@
         <form method="post">
             {% csrf_token %}
             <!-- <label for="id_speltak">Lijst</label> -->
-            {{ form.speltak|add_class:'form-control' }}
+            {{ form.filter_slug|add_class:'form-control' }}
             <br/>
             <button class="btn btn-success btn-block" type="submit">Exporteren</button>
         </form>
