--- a/LedenAdministratie/templates/base.html
+++ b/LedenAdministratie/templates/base.html
@@ -19,7 +19,7 @@
 <body>
 
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-2 mr-0" href="{% url 'ledenlijst' 'nieuw' %}">Leden DJO</a>
+    <a class="navbar-brand col-2 mr-0" href="{% url 'ledenlijst' %}">Leden DJO</a>
 </nav>
 
 <div class="container-fluid">
@@ -28,6 +28,19 @@
             <div class="sidebar-sticky">
 
                 {% block navbar %}
+                    <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                        <span>Filters</span>
+                    </h6>
+
+                    <ul class="nav flex-column">
+                        {% for type in types %}
+                            <li class="nav-item">
+                                <a {% if filter_slug == type.slug %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{% url 'ledenlijst' type.slug %}">
+                                    <span data-feather="filter"></span>{{ type.display_name }}
+                                </a>
+                            </li>
+                        {% endfor %}
+                    </ul>
                 {% endblock %}
 
                 <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
