--- a/LedenAdministratie/templates/edit_lid.html
+++ b/LedenAdministratie/templates/edit_lid.html
@@ -79,10 +79,53 @@
         <div class="card">
             <div class="card-body">
                 <div class="card-header text-white bg-secondary">Overig</div>
-
                 <div class="col-md-5">
-                    <label for="id_opmerkingen">Opmerkingen</label>
-                    {{ form.opmerkingen|add_class:'form-control' }}
+                    <h6 class="mt-2">Notities</h6>
+                    <div class="table-responsive">
+                        <table class="table table-hover table-sm">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th>Datum</th>
+                                    <th>Gebruiker</th>
+                                    <th>Notitie</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for note in form.instance.notes.all %}
+                                <tr>
+                                    <td>{{ note.created }}</td>
+                                    <td>{{ note.username }}</td>
+                                    <td>{{ note.text|truncatechars:20 }}</td>
+                                    <td>
+                                        <a data-toggle="modal" data-target="#showNoteModal{{ note.id }}">
+                                            <span data-feather="eye"></span>
+                                        </a>
+                                        <!-- Show Note Modal -->
+                                        <div class="modal fade" id="showNoteModal{{ note.id }}" tabindex="-1" role="dialog">
+                                          <div class="modal-dialog modal-dialog-centered" role="document">
+                                            <div class="modal-content">
+                                              <div class="modal-header">
+                                                <h5 class="modal-title">Notitie gemaakt door {{ note.username }}</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                  <span aria-hidden="true">&times;</span>
+                                                </button>
+                                              </div>
+                                              <div class="modal-body">
+                                                <p>[{{ note.created }}] {{ note.text }}</p>
+                                              </div>
+                                              <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
                 <div class="col-md-5">
                     <br>
@@ -100,3 +143,4 @@
 <br/>
 
 {% endblock %}
+
