--- a/LedenAdministratie/templates/edit_lid.html
+++ b/LedenAdministratie/templates/edit_lid.html
@@ -96,6 +96,7 @@
                                     <th>Gebruiker</th>
                                     <th>Notitie</th>
                                     <th></th>
+                                    <th></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -105,7 +106,35 @@
                                     <td>{{ note.username }}</td>
                                     <td>{{ note.text|truncatechars:20 }}</td>
                                     <td>
-                                        <a data-toggle="modal" data-target="#showNoteModal{{ note.id }}">
+                                        <a href="#" data-toggle="modal" data-target="#showDeleteModal{{ note.id }}">
+                                            <span data-feather="trash-2"></span>
+                                        </a>
+                                        <!-- Note Delete confirm Modal -->
+                                        <div class="modal fade" id="showDeleteModal{{ note.id }}" tabindex="-1" role="dialog">
+                                          <div class="modal-dialog modal-dialog-centered" role="document">
+                                            <div class="modal-content">
+                                              <div class="modal-header">
+                                                <h5 class="modal-title">Notitie verwijderen?</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                  <span aria-hidden="true">&times;</span>
+                                                </button>
+                                              </div>
+                                              <div class="modal-body">
+                                                <p>Weet u zeker dat u de notitie wilt verwijderen?</p>
+                                              </div>
+                                              <div class="modal-footer">
+                                                  <form method="post" action="{% url 'lid_delnote' note.id %}">
+                                                      {% csrf_token %}
+                                                      <button type="submit" class="btn btn-primary">Verwijderen</button>
+                                                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuleren</button>
+                                                  </form>
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <a href="#" data-toggle="modal" data-target="#showNoteModal{{ note.id }}">
                                             <span data-feather="eye"></span>
                                         </a>
                                         <!-- Show Note Modal -->
@@ -122,7 +151,7 @@
                                                 <p>[{{ note.created }}] {{ note.text }}</p>
                                               </div>
                                               <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Sluiten</button>
                                               </div>
                                             </div>
                                           </div>
@@ -148,6 +177,7 @@
     <button onclick="javascript:history.go(-1)" type="button" class="btn btn-secondary">Annuleren</button>
 </form>
 <br/>
+
 
 {% endblock %}
 
