--- a/LedenAdministratie/templates/edit_lid.html
+++ b/LedenAdministratie/templates/edit_lid.html
@@ -39,7 +39,7 @@
                         <label for="id_types">Type</label>
                         {{ form.types|add_class:'form-control' }}
 
-                        <h6 class="mt-3 ml-3">Dagdeel aanwezig</h6>
+                        <label class="mt-3 ml-3">Dagdeel aanwezig</label>
                         <div class="form-check mt-1 ml-3">
                             {{ form.dag_vrijdag|add_class:'form-check-input' }}
                             <label for="id_dag_vrijdag">Vrijdag</label>
@@ -88,103 +88,21 @@
         <div class="card">
             <div class="card-body">
                 <div class="card-header text-white bg-secondary">Overig</div>
+                    {% include 'notes_table.html' %}
                 <div class="col-md-5">
-                    <h6 class="mt-2">Notities</h6>
-                    <div class="table-responsive">
-                        <table class="table table-hover table-sm">
-                            <thead class="thead-light">
-                                <tr>
-                                    <th>Datum</th>
-                                    <th>Gebruiker</th>
-                                    <th>Notitie</th>
-                                    <th></th>
-                                    <th></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for note in object.notes.all %}
-                                <tr>
-                                    <td>{{ note.created }}</td>
-                                    <td>{{ note.username }}</td>
-                                    <td>{{ note.text|truncatechars:20 }}</td>
-                                    <td>
-                                        <a href="#" data-toggle="modal" data-target="#showDeleteModal{{ note.id }}">
-                                            <span data-feather="trash-2"></span>
-                                        </a>
-                                        <!-- Note Delete confirm Modal -->
-                                        <div class="modal fade" id="showDeleteModal{{ note.id }}" tabindex="-1" role="dialog">
-                                          <div class="modal-dialog modal-dialog-centered" role="document">
-                                            <div class="modal-content">
-                                              <div class="modal-header">
-                                                <h5 class="modal-title">Notitie verwijderen?</h5>
-                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                  <span aria-hidden="true">&times;</span>
-                                                </button>
-                                              </div>
-                                              <div class="modal-body">
-                                                <p>Weet u zeker dat u de notitie wilt verwijderen?</p>
-                                              </div>
-                                              <div class="modal-footer">
-                                                  <form method="post" action="{% url 'lid_delnote' note.id %}">
-                                                      {% csrf_token %}
-                                                      <button type="submit" class="btn btn-primary">Verwijderen</button>
-                                                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuleren</button>
-                                                  </form>
-                                              </div>
-                                            </div>
-                                          </div>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <a href="#" data-toggle="modal" data-target="#showNoteModal{{ note.id }}">
-                                            <span data-feather="eye"></span>
-                                        </a>
-                                        <!-- Show Note Modal -->
-                                        <div class="modal fade" id="showNoteModal{{ note.id }}" tabindex="-1" role="dialog">
-                                          <div class="modal-dialog modal-dialog-centered" role="document">
-                                            <div class="modal-content">
-                                              <div class="modal-header">
-                                                <h5 class="modal-title">Notitie gemaakt door {{ note.username }}</h5>
-                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                  <span aria-hidden="true">&times;</span>
-                                                </button>
-                                              </div>
-                                              <div class="modal-body">
-                                                <p>[{{ note.created }}] {{ note.text }}</p>
-                                              </div>
-                                              <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Sluiten</button>
-                                              </div>
-                                            </div>
-                                          </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-
-                        <a class="btn btn-primary btn-sm" role="button" href="{% url 'lid_addnote' object.id %}">
-                            Toevoegen</span>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-5">
-                    <br>
+                    <!-- Hier komen de facturen -->
                 </div>
             </div>
         </div>
     </div>
     {% endif %}
 
-    <br>
     {% if perms.LedenAdministratie.change_lid %}
-    <button type="submit" class="btn btn-success">Opslaan</button>
+    <button type="submit" class="btn btn-success my-5">Opslaan</button>
     {% endif %}
-    <button onclick="javascript:history.go(-1)" type="button" class="btn btn-secondary">Annuleren</button>
+    <button onclick="javascript:history.go(-1)" type="button" class="btn btn-secondary my-5">Annuleren</button>
+
 </form>
-<br/>
 
 
 {% endblock %}
-
