Format linebreaks correctly in notes

--- a/LedenAdministratie/templates/notes_table.html
+++ b/LedenAdministratie/templates/notes_table.html
@@ -60,7 +60,7 @@
                                 </button>
                               </div>
                               <div class="modal-body">
-                                <p>[{{ note.created }}] {{ note.text }}</p>
+                                <p>[{{ note.created }}] {{ note.text|linebreaks }}</p>
                               </div>
                               <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Sluiten</button>
