Implement todo's and note editing

--- a/LedenAdministratie/templates/edit_lid.html
+++ b/LedenAdministratie/templates/edit_lid.html
@@ -59,7 +59,7 @@
     <div class="col-md-10">
         <div class="card">
             <div class="card-body">
-                <div class="card-header text-white bg-secondary">Contactgegevens / Foto</div>
+                <div class="card-header text-white bg-secondary">Contactgegevens en Foto</div>
 
                 <div class="form-row">
                     <div class="col-5">
@@ -99,7 +99,7 @@
     <div class="col-md-10">
         <div class="card">
             <div class="card-body">
-                <div class="card-header text-white bg-secondary">Overig</div>
+                <div class="card-header text-white bg-secondary">Notities en Facturen</div>
                     {% include 'notes_table.html' %}
                 <div class="col-md-5">
                     <!-- Hier komen de facturen -->
